# ds-examples

./: .gitignore  README.md
algotrading/: binance.ipynb  requirements.txt
ctypes/: ctypes_vs_the_world.ipynb  mysum.c
dataflows/: dask_delayed_with_caching.ipynb  mlflow_experiment.ipynb  mlflow_experiment.py  mlflow_experiment_papermill.ipynb  prefect_hello_world.ipynb  requirements.txt  sklearn_pipeline_with_pandas.ipynb
dataflows/papermill_runs/: pm__include_c=False_adjust_for_country=False.ipynb  pm__include_c=False_adjust_for_country=True.ipynb  pm__include_c=True_adjust_for_country=False.ipynb  pm__include_c=True_adjust_for_country=True.ipynb
devenv/: popos_python_env_setup.MD
dl/: cnn.ipynb  cnn_rnn.ipynb  dl_hello_world.ipynb  requirements.txt
equations/: requirements.txt  sympy_vs_the_world.ipynb
events/: performance_numpy_vs_event_based.ipynb  requirements.txt
interviewkit/: README.md  coding_exercises.ipynb  ds_setup.ipynb  pyproject.toml  requirements.txt
jax/: bayesian_models.ipynb  efficient_computing.ipynb  requirements.txt
mldesign/: ab_testing_with_peeking.ipynb  overfitting.ipynb  requirements.txt
models/: function_interpolation.ipynb  requirements.txt
plotly/: plotly_example.ipynb  requirements.txt
timescaledb/: full_example.py  q0_create_hypertable copy.sql  q1_insert.sql  q2_select.sql  q3_time_bucket copy.sql  q4_drop_table.sql
unsupervised/: README.md  requirements.txt
